# variationist

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  advanced_example.py  advanced_example_measuringhs.py  app.py  example.py  main.py  netflix.tsv  output.json  pyproject.toml  readthedocs.yaml  requirements.txt
data/: founta.train.sample.tsv  netflix-toy.tsv  netflix.tsv
docs/: Makefile  charts.md  custom-components.md  input-dataset.md  make.bat  metrics.md  tokenizers.md  units.md  variables.md
docs/source/: api.rst  conf.py  core-classes.rst  index.rst  intro.rst  modules.rst  requirements.txt  variationist.data.rst  variationist.metrics.rst  variationist.rst  variationist.visualization.rst
examples/: README.md  Variationist - Example 1: Custom Tokenizers.ipynb  Variationist - Example 2: Custom Metrics.ipynb  Variationist - Quickstart.ipynb  Variationist - Use Case 1: Language Variation Across Space and Time.ipynb  Variationist - Use Case 3: Grasping Features of Human vs Generated Texts.ipynb  Variationist-Quickstart.ipynb  Variationist_Example_1_Custom_Tokenizers.ipynb  Variationist_Example_2_Custom_Metrics.ipynb  Variationist_Quickstart.ipynb  Variationist_Use_Case_3_Analyzing_Features_of_Human_vs_Generated_Texts.ipynb
src/: inspector.py  utils.py  visualizer.py
src/data/: data_dispatcher.py  preprocess.py  preprocess_utils.py  tokenization.py  tokenization_utils.py
src/data_handler/: data_dispatcher.py  formatting.py  preprocess.py
src/methods/: corpus_statistics.py  metrics.py  (+6 more)
variationist/: __init__.py  inspector.py  utils.py  visualizer.py
(+46 files in other folders)
